--- a/src/index.html
+++ b/src/index.html
@@ -32,6 +32,7 @@
   <ion-app></ion-app>
 
   <script src="https://maps.googleapis.com/maps/api/js"></script>
+  <script src="cordova.js"></script>
 
   <!-- The polyfills js is generated during the build process -->
   <script src="build/polyfills.js"></script>
