Updated app files

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -9,7 +9,9 @@
     </ion-title>
 
     <ion-buttons end>
-      <ion-searchbar></ion-searchbar>
+      <button ion-button icon-only (click)="setMapCenter()">
+        <ion-icon name="locate"></ion-icon>
+      </button>
     </ion-buttons>
   </ion-navbar>
 </ion-header>
